Improve BCQL value typing. Made expressions more orthogonal.
BCQL now has integer, boolean and list types. A list can be made by calling e.g. list(1, 2, 3). Some functions can take either a single list argument or a variable number of arguments that will automatically be converted to a list. For example, with len(list(4,5,6)), len() will return the length of its argument (3), but len(4,5,6) returns the same, because the arguments are automatically converted to a list.

X containing list(Y, Z) now works and will translate to ((X containing Y) containing Z). This also works for the within operator.

Expressions inside [ ] and after :: are now parsed by the same code. This allows for e.g. (plugin) function calls inside token brackets, i.e. [word=synonyms("whee")] could transform "whee" into "whee|woohoo|yay". The same goes for tag attributes, so something like <city country-id=find_id("nl") /> is possible as well now. Of course, not everything is possible, for example A:[] [word=A.word] does not work and should instead be written as A:[] B:[] :: A.word = B.word.

BLS' summary.pattern JSON structure was updated to reflect the increased flexibility of expressions, and frontend was updated to recognize the new JSON structure. So you need the dev version of frontend with this dev version of BlackLab.

Before this refactor, MatchFilter was part of the TextPatternStruct tree. This is no longer the case; instead, a class like TextPatternCompare will evaluate to a MatchFilter in the constraint context (after ::) and to a BLSpanQuery in the query context (before ::). QueryExecutionContext keeps track of whether we're in the query or in the constraint part of the query while evaluating. TextPattern.evaluate() currently returns Object for this reason; a future refactor could improve this. TextPattern.toQuery() is the equivalent of the old TextPattern.translate() and will always return a BLSpanQuery.

In order to better deal with the ambiguity of double-quoted string in BCQL ("cow