@@ -3,6 +3,7 @@ package nl.inl.blacklab.search.extensions;
 import java.util.Arrays;
 import java.util.List;
 
+import nl.inl.blacklab.plugins.ExprType;
 import nl.inl.blacklab.plugins.QueryFunction;
 import nl.inl.blacklab.search.QueryExecutionContext;
 import nl.inl.blacklab.search.lucene.BLSpanQuery;
@@ -15,12 +16,16 @@ import nl.inl.blacklab.search.lucene.SpanQueryFixedSpan;
  */
 public class QueryFunctionFixedSpan extends QueryFunction {
     public QueryFunctionFixedSpan() {
-        super("_fixed", ARGS_SS, Arrays.asList(null, null), false);
+        super("_fixed", List.of(ExprType.INTEGER, ExprType.INTEGER), Arrays.asList(null, null), false);
     }
 
     public BLSpanQuery applyFunc(QueryExecutionContext context, List<Object> parameters) {
-        int start = Integer.parseInt((String) parameters.get(0));
-        int end = Integer.parseInt((String) parameters.get(1));
+        int start = (Integer) parameters.get(0);
+        int end = (Integer) parameters.get(1);
+        if (start < 0 || end < 0)
+            throw new IllegalArgumentException("_fixed() takes non-negative integers as arguments");
+        if (end < start)
+            throw new IllegalArgumentException("_end must be greater than or equal to _start in _fixed()");
         return new SpanQueryFixedSpan(context.queryInfo(), context.luceneField(), start, end);
     }
 }
